--- a/app/src/declaration/view/psyc/sections/konklusion.html
+++ b/app/src/declaration/view/psyc/sections/konklusion.html
@@ -4,13 +4,20 @@
         height: 150px;
         color: blue;
     }
+
+    .oneormore {
+        font-weight: bold;
+    }
+
 </style>
 
 <html>
 <md-card>
     <md-card-title>
         <md-card-title-text>
-            <span class="md-headline">Konklusion på psykologisk undersøgelse</span>
+            <span ng-show="vm.oneormoreKonklusion" class="md-headline oneormore">Konklusion på psykologisk undersøgelse</span>
+            <span ng-hide="vm.oneormoreKonklusion" class="md-headline">Konklusion på psykologisk undersøgelse</span>
+<!--            <span class="md-headline">Konklusion på psykologisk undersøgelse</span>-->
         </md-card-title-text>
     </md-card-title>
     <md-card-content>
