--- a/app/src/declaration/view/psyc/sections/malering.html
+++ b/app/src/declaration/view/psyc/sections/malering.html
@@ -1,3 +1,9 @@
+<style>
+    .oneormore {
+        font-weight: bold;
+    }
+</style>
+
 <md-card>
     <md-card-title>
         <md-card-title-text>
@@ -8,11 +14,12 @@
         <div layout="row">
 
             <md-input-container class="md-block" flex>
-                <label>Psykologisk vurdering af forekomst af malingering</label>
-                <input ng-model="vm.PsycInstruments" maxlength="10" minlength="10" name="cprNo">
+                <label ng-show="vm.oneormoreForeMalering" class="oneormore" >Psykologisk vurdering af forekomst af malingering</label>
+                <label ng-hide="vm.oneormoreForeMalering" >Psykologisk vurdering af forekomst af malingering</label>
+                <input ng-model="vm.PsycInstruments" maxlength="10" minlength="10" name="cprNo" ng-disabled="true">
             </md-input-container>
 
-            <md-button class="md-icon-button" ng-click="vm.viewButton(vm.PROP_PSYC_LIBRARY_PSYCH_TYPE)" ">
+            <md-button class="md-icon-button" ng-click="vm.viewButton(vm.PROP_PSYC_LIBRARY_PSYCH_MALERING)" ">
                 <md-icon>edit</md-icon>
             </md-button>
 
