--- a/app/src/authentication/view/login.html
+++ b/app/src/authentication/view/login.html
@@ -40,10 +40,12 @@
 
         </md-card-content>
 
-        <md-card-footer layout="row" layout-align="center">
-            <a href="#!" ng-click="vm.showForgotDialog($event)">
-                {{ 'LOGIN.FORGOT_PASSWORD' | translate }}?
-            </a>
-        </md-card-footer>
+
+<!-- #49696-->
+<!--        <md-card-footer layout="row" layout-align="center">-->
+<!--            <a href="#!" ng-click="vm.showForgotDialog($event)">-->
+<!--                {{ 'LOGIN.FORGOT_PASSWORD' | translate }}?-->
+<!--            </a>-->
+<!--        </md-card-footer>-->
     </md-card>
 </div>
