--- a/app/src/declaration/view/unabletolockBUA.html
+++ b/app/src/declaration/view/unabletolockBUA.html
@@ -44,7 +44,7 @@
 
         <div class="unable">
             <br>
-            <b>Sagen kan ikke afsluttes, da følgende felter skal være udfyldt:</b>
+            <b>Sagen kan ikke afsluttes, da følgende felter mangler at blive udfyldt:</b>
             <br><br>
             Placering og sanktionsforslag
             <br><br>
