--- a/app/src/declaration/view/sections/history.html
+++ b/app/src/declaration/view/sections/history.html
@@ -11,6 +11,9 @@
                 <md-datepicker ng-model="case.creationDate" ng-disabled="!editPatientData" required></md-datepicker>
             </md-input-container>
         </div>
+
+
+        <div ng-hide="vm.afslutwarning_observationDate">
         <div layout="row">
             <md-input-container flex>
                 <label>Observation påbegyndt</label>
@@ -24,6 +27,28 @@
                 </md-icon>
             </span>
         </div>
+        </div>
+
+        <div ng-show="vm.afslutwarning_observationDate">
+            <div class="ghostbusters">
+            <div layout="row">
+                <md-input-container flex>
+                    <label>Observation påbegyndt</label>
+                    <md-datepicker ng-model="case.observationDate" ng-disabled="!editPatientData"></md-datepicker>
+                </md-input-container>
+                <span style="float:right" ng-show="case.waiting_passive">
+                {{case.waiting_passive}}
+                <md-icon class="icon-small">
+                    info_outline
+                    <md-tooltip md-direction="top">Passiv ventetid</md-tooltip>
+                </md-icon>
+            </span>
+            </div>
+        </div>
+        </div>
+
+
+        <div ng-hide="vm.afslutwarning_declarationDate">
         <div layout="row">
             <md-input-container flex>
                 <label>Erklæring afgivet</label>
@@ -37,6 +62,26 @@
                 </md-icon>
             </span>
         </div>
+        </div>
+
+        <div ng-show="vm.afslutwarning_declarationDate">
+            <div class="ghostbusters">
+            <div layout="row">
+                <md-input-container flex>
+                    <label>Erklæring afgivet</label>
+                    <md-datepicker ng-model="case.declarationDate" ng-disabled="!editPatientData"></md-datepicker>
+                </md-input-container>
+                <span style="float:right" ng-show="case.waiting_active">
+                {{case.waiting_active}}
+                <md-icon class="icon-small">
+                    info_outline
+                    <md-tooltip md-direction="top">Aktiv ventetid</md-tooltip>
+                </md-icon>
+            </span>
+            </div>
+        </div>
+        </div>
+
         <div layout="row">
             <span flex></span>
             <span ng-show="case.waiting_total">
