--- a/app/src/declaration/view/unabletolock.html
+++ b/app/src/declaration/view/unabletolock.html
@@ -30,13 +30,13 @@
 
 
 <md-dialog aria-label="genåben sagen">
-    <form name="lockDeclarationForm" ng-submit="unlockCase()">
+    <form name="lockDeclarationForm" ng-submit="afbryd()">
 
         <md-toolbar>
             <div class="md-toolbar-tools">
                 <h2>{{'DECLARATION.UNLOCK_UNABLE' | translate}}</h2>
                 <span flex></span>
-                <md-button class="md-icon-button" ng-click="cancel()">
+                <md-button class="md-icon-button" ng-click="afbryd()">
                     <i class="material-icons" aria-label="Luk dialogboks">close</i>
                 </md-button>
             </div>
@@ -44,7 +44,7 @@
 
         <div class="unable">
             <br>
-            <b>Sagen kan ikke afsluttes, da følgende felter skal være udfyldt:</b>
+            <b>Sagen kan ikke afsluttes, da følgende felter mangler at blive udfyldt:</b>
             <br><br>
             Etnicitet, Mors etnicitet og Fars etnicitet
             <br><br>
