--- a/app/src/declaration/view/sections/referral.html
+++ b/app/src/declaration/view/sections/referral.html
@@ -42,12 +42,24 @@
             </div>
         </div>
 
-
+        <div ng-hide="vm.afslutwarning_journalNumber">
         <div>
             <md-input-container class="md-block">
                 <label>Journalnummer</label>
                 <input ng-model="case.journalNumber" ng-disabled="!editPatientData">
             </md-input-container>
+        </div>
+        </div>
+
+        <div ng-show="vm.afslutwarning_journalNumber">
+            <div class="ghostbusters">
+            <div>
+                <md-input-container class="md-block">
+                    <label>Journalnummer</label>
+                    <input ng-model="case.journalNumber" ng-disabled="!editPatientData">
+                </md-input-container>
+            </div>
+        </div>
         </div>
 
         <div>
@@ -81,17 +93,46 @@
             <md-radio-button value="samtykke">Samtykke</md-radio-button>
         </md-radio-group>
 
+
         <div ng-if="case.declarationType === 'kendelse'">
+
+            <div ng-hide="vm.afslutwarning_rulingDate">
             <div layout="row">
                 <md-input-container flex>
                     <label>Kendelsesdato</label>
                     <md-datepicker ng-model="case.rulingDate" ng-disabled="!editPatientData"></md-datepicker>
                 </md-input-container>
             </div>
+            </div>
+
+            <div ng-show="vm.afslutwarning_rulingDate">
+                <div class="ghostbusters">
+                <div layout="row">
+                    <md-input-container flex>
+                        <label>Kendelsesdato</label>
+                        <md-datepicker ng-model="case.rulingDate" ng-disabled="!editPatientData"></md-datepicker>
+                    </md-input-container>
+                </div>
+            </div>
+
+
+
+            <div ng-hide="vm.afslutwarning_rulingCourt">
             <md-input-container class="md-block">
                 <label>Retten i</label>
                 <input ng-model="case.rulingCourt" ng-disabled="!editPatientData">
             </md-input-container>
+            </div>
+
+            <div ng-show="vm.afslutwarning_rulingCourt">
+                <div class="ghostbusters">
+                <md-input-container class="md-block">
+                    <label>Retten i</label>
+                    <input ng-model="case.rulingCourt" ng-disabled="!editPatientData">
+                </md-input-container>
+            </div>
+            </div>
+
         </div>
     </md-card-content>
 </md-card>
