--- a/app/src/declaration/view/sections/referral.html
+++ b/app/src/declaration/view/sections/referral.html
@@ -1,7 +1,7 @@
 <style>
-    .ghostbusters {
-        background-color: red;
-    }
+    /*ghostbusters {*/
+    /*    background-color: red;*/
+    /*}*/
 </style>
 
 <md-card>
