fixed text color

--- a/app/src/declaration/view/sections/referral.html
+++ b/app/src/declaration/view/sections/referral.html
@@ -1,7 +1,12 @@
 <style>
-    .ghostbusters {
-        background-color: red;
+    .ghostbusters * input {
+        color: red !important;
     }
+
+    .ghostbusters * label {
+        color: red !important;
+    }
+
 </style>
 
 <md-card>
@@ -62,6 +67,7 @@
         </div>
         </div>
 
+        <div ng-hide="vm.afslutwarning_mainCharge">
         <div>
             <md-autocomplete flex md-selected-item="case.mainCharge" md-search-text="mainChargeSearch" md-items="mainCarge in propertyFilter(propertyValues['mainCharge'],mainChargeSearch)"
                 md-item-text="mainCarge" md-min-length="0" md-floating-label="Hovedsigtelse" ng-disabled="!editPatientData"
@@ -71,6 +77,22 @@
                 </md-item-template>
             </md-autocomplete>
             <md-tooltip md-direction="top" md-delay="500" ng-if="case.mainCharge != null">{{case.mainCharge}}</md-tooltip>
+        </div>
+        </div>
+
+        <div ng-show="vm.afslutwarning_mainCharge">
+            <div class="ghostbusters">
+            <div>
+                <md-autocomplete flex md-selected-item="case.mainCharge" md-search-text="mainChargeSearch" md-items="mainCarge in propertyFilter(propertyValues['mainCharge'],mainChargeSearch)"
+                                 md-item-text="mainCarge" md-min-length="0" md-floating-label="Hovedsigtelse" ng-disabled="!editPatientData"
+                                 md-clear-button="editPatientData" md-require-match="true">
+                    <md-item-template>
+                        <span md-highlight-text="mainChargeSearch" md-highlight-flags="gi">{{mainCarge}}</span>
+                    </md-item-template>
+                </md-autocomplete>
+                <md-tooltip md-direction="top" md-delay="500" ng-if="case.mainCharge != null">{{case.mainCharge}}</md-tooltip>
+            </div>
+        </div>
         </div>
 
         <md-autocomplete flex md-selected-item="case.status" md-search-text="statusSearch" md-items="status in propertyFilter(propertyValues['status'],statusSearch)"
@@ -114,6 +136,7 @@
                     </md-input-container>
                 </div>
             </div>
+            </div>
 
 
 
@@ -130,9 +153,9 @@
                     <label>Retten i</label>
                     <input ng-model="case.rulingCourt" ng-disabled="!editPatientData">
                 </md-input-container>
+                </div>
             </div>
-            </div>
-
+        </div>
         </div>
     </md-card-content>
 </md-card>
