added new requirements

--- a/app/src/declaration/view/sections/referral.html
+++ b/app/src/declaration/view/sections/referral.html
@@ -95,13 +95,27 @@
         </div>
         </div>
 
-        <md-autocomplete flex md-selected-item="case.status" md-search-text="statusSearch" md-items="status in propertyFilter(propertyValues['status'],statusSearch)"
-            md-item-text="status" md-min-length="0" md-floating-label="Status" ng-disabled="!editPatientData"
-            md-clear-button="editPatientData" md-require-match="true">
-            <md-item-template>
-                <span md-highlight-text="statusSearch" md-highlight-flags="gi">{{status}}</span>
-            </md-item-template>
-        </md-autocomplete>
+        <div ng-hide="vm.afslutwarning_status">
+            <md-autocomplete flex md-selected-item="case.status" md-search-text="statusSearch" md-items="status in propertyFilter(propertyValues['status'],statusSearch)"
+                md-item-text="status" md-min-length="0" md-floating-label="Status" ng-disabled="!editPatientData"
+                md-clear-button="editPatientData" md-require-match="true">
+                <md-item-template>
+                    <span md-highlight-text="statusSearch" md-highlight-flags="gi">{{status}}</span>
+                </md-item-template>
+            </md-autocomplete>
+        </div>
+
+        <div ng-show="vm.afslutwarning_status">
+        <div class="ghostbusters">
+            <md-autocomplete flex md-selected-item="case.status" md-search-text="statusSearch" md-items="status in propertyFilter(propertyValues['status'],statusSearch)"
+                             md-item-text="status" md-min-length="0" md-floating-label="Status" ng-disabled="!editPatientData"
+                             md-clear-button="editPatientData" md-require-match="true">
+                <md-item-template>
+                    <span md-highlight-text="statusSearch" md-highlight-flags="gi">{{status}}</span>
+                </md-item-template>
+            </md-autocomplete>
+        </div>
+        </div>
 
         <div>
         <md-input-container class="md-block">
