--- a/app/src/declaration/view/psyc/sections/undersogelsesintrumenter.html
+++ b/app/src/declaration/view/psyc/sections/undersogelsesintrumenter.html
@@ -20,7 +20,7 @@
                 <input ng-model="case.cprNumber" maxlength="10" minlength="10" ng-disabled="!editPatientData" name="cprNo" ng-disabled="true">
             </md-input-container>
 
-            <md-button class="md-icon-button" ng-click="vm.viewButton(vm.PROP_PSYC_LIBRARY_INTERVIEWRATING)" ">
+            <md-button class="md-icon-button" ng-click="vm.viewButton2(vm.PROP_PSYC_LIBRARY_INTERVIEWRATING)" ">
                 <md-icon>edit</md-icon>
             </md-button>
 
@@ -34,7 +34,7 @@
                 <input ng-model="case.cprNumber" maxlength="10" minlength="10" ng-disabled="!editPatientData" name="cprNo" ng-disabled="true">
             </md-input-container>
 
-            <md-button class="md-icon-button" ng-click="vm.viewButton(vm.PROP_PSYC_LIBRARY_KOGNITIV)" ">
+            <md-button class="md-icon-button" ng-click="vm.viewButton2(vm.PROP_PSYC_LIBRARY_KOGNITIV)" ">
             <md-icon>edit</md-icon>
             </md-button>
 
