--- a/app/src/declaration/view/psyc/sections/konklusion.html
+++ b/app/src/declaration/view/psyc/sections/konklusion.html
@@ -27,7 +27,7 @@
                 <textarea  style="width: 500px" ng-model="flow.oplysningerEksternt" rows="3"></textarea>
             </md-input-container>
 
-        <md-button  ng-click="vm.viewButton(vm.PROP_PSYC_LIBRARY_KONKLUSION_TAGS)" ">Standard formuleringer
+        <md-button  ng-click="vm.viewButton2(vm.PROP_PSYC_LIBRARY_KONKLUSION_TAGS)" ">Standard formuleringer
         <md-icon>edit</md-icon>
         </md-button>
 
