ready for external test

--- a/app/src/declaration/view/psyc/sections/malering.html
+++ b/app/src/declaration/view/psyc/sections/malering.html
@@ -19,7 +19,7 @@
                 <input ng-model="vm.PsycInstruments" maxlength="10" minlength="10" name="cprNo" ng-disabled="true">
             </md-input-container>
 
-            <md-button class="md-icon-button" ng-click="vm.viewButton(vm.PROP_PSYC_LIBRARY_PSYCH_MALERING)" ">
+            <md-button class="md-icon-button" ng-click="vm.viewButton2(vm.PROP_PSYC_LIBRARY_PSYCH_MALERING)" ">
                 <md-icon>edit</md-icon>
             </md-button>
 
