--- a/app/src/declaration/view/psyc/sections/konklusion.html
+++ b/app/src/declaration/view/psyc/sections/konklusion.html
@@ -24,14 +24,14 @@
 
 
             <md-input-container>
-                <textarea  style="width: 500px" ng-model="flow.oplysningerEksternt" rows="3"></textarea>
+                <textarea  style="width: 500px" ng-model="vm.conclusionText" rows="3"></textarea>
             </md-input-container>
 
         <md-button  ng-click="vm.viewButton2(vm.PROP_PSYC_LIBRARY_KONKLUSION_TAGS)" ">Standard formuleringer
         <md-icon>edit</md-icon>
         </md-button>
 
-        <md-button  ng-click="vm.viewButton(vm.PROP_PSYC_LIBRARY_KONKLUSION_TAGS)" ">gem</md-button>
+        <md-button  ng-click="vm.saveConclusionText()" ">gem fritekst</md-button>
 
 
 
