--- a/app/src/declaration/view/psyc/sections/undersogelsesintrumenter.html
+++ b/app/src/declaration/view/psyc/sections/undersogelsesintrumenter.html
@@ -48,7 +48,7 @@
                 <input ng-model="case.cprNumber" maxlength="10" minlength="10" ng-disabled="!editPatientData" name="cprNo" ng-disabled="true">
             </md-input-container>
 
-            <md-button class="md-icon-button" ng-click="vm.viewButton(vm.PROP_PSYC_LIBRARY_IMPLECITE)" ">
+            <md-button class="md-icon-button" ng-click="vm.viewButton2(vm.PROP_PSYC_LIBRARY_IMPLECITE)" ">
             <md-icon>edit</md-icon>
             </md-button>
 
@@ -62,7 +62,7 @@
                 <input ng-model="case.cprNumber" maxlength="10" minlength="10" ng-disabled="!editPatientData" name="cprNo" ng-disabled="true">
             </md-input-container>
 
-            <md-button class="md-icon-button" ng-click="vm.viewButton(vm.PROP_PSYC_LIBRARY_EXPLICIT)" ">
+            <md-button class="md-icon-button" ng-click="vm.viewButton2(vm.PROP_PSYC_LIBRARY_EXPLICIT)" ">
             <md-icon>edit</md-icon>
             </md-button>
 
@@ -76,7 +76,7 @@
                 <input ng-model="case.cprNumber" maxlength="10" minlength="10" ng-disabled="!editPatientData" name="cprNo" ng-disabled="true">
             </md-input-container>
 
-            <md-button class="md-icon-button" ng-click="vm.viewButton(vm.PROP_PSYC_LIBRARY_MALERING)" ">
+            <md-button class="md-icon-button" ng-click="vm.viewButton2(vm.PROP_PSYC_LIBRARY_MALERING)" ">
             <md-icon>edit</md-icon>
             </md-button>
 
@@ -91,7 +91,7 @@
                 <input ng-model="case.cprNumber" maxlength="10" minlength="10" ng-disabled="!editPatientData" name="cprNo" ng-disabled="true">
             </md-input-container>
 
-            <md-button class="md-icon-button" ng-click="vm.viewButton(vm.PROP_PSYC_LIBRARY_RISIKO)" ">
+            <md-button class="md-icon-button" ng-click="vm.viewButton2(vm.PROP_PSYC_LIBRARY_RISIKO)" ">
             <md-icon>edit</md-icon>
             </md-button>
 
